--- a/index.html
+++ b/index.html
@@ -10,30 +10,33 @@
 <body>
     <h1 class='titlePit'>Pitbulls</h1>
         <div class="pitImg">
-            <img src='pitbull-baby.jpg' alt='Pitbull with a baby'>
+            <a href='https://i.4pcdn.org/pol/1515086808447.gif' alt='gif'><img class='img' src='pitbull-baby.jpg' alt='Pitbull with a baby'></a>
         </div>
-            <div class="factsPit">Facts</div>
-            <ul>
+            <div class="factsPit true-false">Facts</div>
+            <ul class="Facts">
+                <hr />
                 <li>Pitbulls are nice. They are not dangerous or aggressive. They are the nicest breed to have.</li>
                 <li>They used to be a mascot for the U.S Army: during the two world wars pitbulls were incorported into the recruting. This breed was chosen to symbolize braver, loyalty, and determination.</li>
                 <li>Perfect Therapy Dogs: They have been serving wekk as therapy dogs becase they arae loving and affectionate, also can be funny.</li>
                 <li>They are emotional too: Pitbulls are big babies, no other dog has the same emotional range as the pitbull. They forgive and forget very quickly.</li>
             </ul>
-            <div class="Myth">Myth</div>
-            <ul>
+            <div class="Myth true-false">Myth</div>
+            <ul class='false'>
+                <hr />
                 <li>Pitbull terriers have locking jaws.</li>
                 <li>Pitbull terriers are more aggressive than other dogs</li>
                 <li>Pitbull terriers are not good family dogs and that’s why you see so many in shelters.</li>
             </ul>
+         <h2>PitbullyPit</h2>
         <div class="pitbullParagraph">
             <p>Pit-bull-like dogs are actually some of the most popular types of dogs in America.The American pit bull terrier is one of the top three favorite breeds in 28 states. Because pit bull terriers are so popular, some people are overbreeding them and others are neglecting to spay or neuter their dogs, resulting in unwanted litters. These two factors, along with breed-discriminatory legislation, have led to an influx of pit-bull-like dogs in shelters.They're also not aggressive, they're more affectionate. The American Temperament Test Society, which provides a uniform national program of temperament testing for dogs, has found that pit-bull-terrier-like dogs passed the test at a higher rate than many other dog breeds, including golden retrievers and border collies. Breed has nothing to do with it. A peer-reviewed study found that nearly 85 percent of dog bite fatalities were from unneutered dogs. Other factors that contributed to bites were abuse or neglect, tethering for long periods of time, and lack of positive interaction with people and other animals.Pit bulls are tenacious: When they put their mind to something, they often achieve it. For that reason, they make great sporting dogs. Pitties tend to excel on agility or flyball courses where they can show off their strength and speed.
             The flip-side of all that energy and determination is that pitties can be willfull, even stubborn. But because of their people-pleasing nature, pit bulls are imminently trainable. They make excellent therapy dog candidates. Obedience training is a great way to bond with your best friend while laying the groundwork for good manners. As with any dog, exercise and engagement are key for pit bulls, too. They love to snuggle, cuddle, roll over for belly rubs, crawl in your lap if you’ll allow it, and stay as close to you as possible all day long. Pitbulls are great family dogs, they truly become your best friend. </p>
         </div>
         <h3>For More Information</h3>
             <ul class='links'>
-                <li><a href='https://terriblyterrier.com/interesting-facts-about-pit-bulls/' alt='info about pitbulls'>40 Terribly Interesting Facts About Pit Bulls</a></li>
-                <li><a href='https://www.petfinder.com/pet-adoption/dog-adoption/reasons-why-pit-bulls-rule/' alt='why pitbulls rule'>10 Reasons Why Pit Bulls Rule</a></li>
-                <li><a href='https://www.youtube.com/watch?v=pgnZsw8U4t4' alt='video about pitbull'>Video: What you Need to Know about Pit Bulls</a></li>
+                <li><a class='link1' href='https://terriblyterrier.com/interesting-facts-about-pit-bulls/' alt='info about pitbulls'>40 Terribly Interesting Facts About Pit Bulls</a></li>
+                <li><a class='link1' href='https://www.petfinder.com/pet-adoption/dog-adoption/reasons-why-pit-bulls-rule/' alt='why pitbulls rule'>10 Reasons Why Pit Bulls Rule</a></li>
+                <li><a class='link1' href='https://www.youtube.com/watch?v=pgnZsw8U4t4' alt='video about pitbull'>Video: What you Need to Know about Pit Bulls</a></li>
             </ul>
     
 </body>
